--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,10 +19,8 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
+    "typeRoots": ["./node_modules/@types", "@types"],
     "baseUrl": "src",
-    "typeRoots": ["./node_modules/@types", "@types"]
   },
-  "include": [
-    "src"
-  ]
+  "include": ["src"]
 }
