--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,8 @@
 {
-  "singleQuote": true,
-  "parser": "typescript",
-  "semi": true,
-  "useTabs": false,
-  "tabWidth": 2,
-  "printWidth": 120,
+  "singleQuote": true, 
+  "semi": true, 
+  "tabWidth": 4, 
+  "trailingComma": "all",
+  "printWidth": 120, 
   "arrowParens": "always"
 }
