--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,6 @@
 {
-  "singleQuote": true, 
-  "semi": true, 
-  "tabWidth": 4, 
-  "trailingComma": "all",
-  "printWidth": 120, 
-  "arrowParens": "always"
-}
+    "trailingComma": "all",
+    "tabWidth": 2,
+    "semi": true,
+    "singleQuote": true
+  }
